--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-exclude:     [CNAME, Gemfile*, LICENSE, Rakefile, README.md]
+exclude:     [Gemfile*, LICENSE, Rakefile, README.md]
 baseurl:     /
 source:      .
 destination: ./_site
